<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExercicesMediumActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_nutrition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/bar_title_medium"
            app:titleTextColor="@color/white" />


        <ImageView
            android:id="@+id/ivLogoMain2"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@mipmap/logo7"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/tvStretches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trainment_stretches"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/nunitosans_black"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:padding="20dp"
            android:background="@drawable/bg_style" />


        <TextView
            android:id="@+id/tvCardio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bg_style"
            android:fontFamily="@font/nunitosans_black"
            android:gravity="center"
            android:text="@string/trainment_cardio"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvLegs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trainment_legs"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/nunitosans_black"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:padding="20dp"
            android:background="@drawable/bg_style"/>

        <TextView
            android:id="@+id/tvAbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trainment_abs"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/nunitosans_black"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:padding="20dp"
            android:background="@drawable/bg_style" />

        <TextView
            android:id="@+id/tvBiceps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trainment_biceps"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/nunitosans_black"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:padding="20dp"
            android:background="@drawable/bg_style" />

        <TextView
            android:id="@+id/tvChest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trainment_chest"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/nunitosans_black"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:padding="20dp"
            android:background="@drawable/bg_style" />

        <TextView
            android:id="@+id/tvTriceps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trainment_triceps"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/nunitosans_black"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:padding="20dp"
            android:background="@drawable/bg_style" />

        <TextView
            android:id="@+id/tvShoulders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trainment_shoulders"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/nunitosans_black"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:padding="20dp"
            android:background="@drawable/bg_style" />

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trainment_back"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/nunitosans_black"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:padding="20dp"
            android:background="@drawable/bg_style" />

    </LinearLayout>

</ScrollView>