<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".NextNutrition">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_nutrition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="@string/bar_nutrition_title"
        app:titleTextColor="@color/white" />


    <TextView
        android:id="@+id/tvImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_style"
        android:fontFamily="@font/nunitosans_black"
        android:padding="20dp"
        android:text="@string/tmb"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_nutrition"
        app:layout_constraintVertical_bias="0.051" />

    <android.widget.Button
        android:id="@+id/bCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/kali_background"
        android:fontFamily="@font/nunitosans_black"
        android:text="@string/calculate_imc"
        android:textColor="@color/hh"
        app:layout_constraintBottom_toTopOf="@+id/tvResultImc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvImc"
        app:layout_constraintVertical_bias="0.68" />

    <TextView
        android:id="@+id/tvResultImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/kali"
        android:fontFamily="@font/nunitosans_black"
        android:text="@string/result_tmb"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvImc" />

    <android.widget.Button
        android:id="@+id/bNextNutrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/kali_background"
        android:fontFamily="@font/nunitosans_black"
        android:text="@string/next_nutrition"
        android:textColor="@color/hh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultImc"
        app:layout_constraintVertical_bias="0.678" />


</androidx.constraintlayout.widget.ConstraintLayout>