<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegisterActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:padding="15dp"
        android:text="@string/new_register"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/etNewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/white"
        android:hint="@string/alias"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <EditText
        android:id="@+id/etnewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewUser"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/white"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etnewEmail"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/etConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewPassword"
        app:layout_constraintVertical_bias="0.086" />

    <CheckBox
        android:id="@+id/cbTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPass"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/tvConditions"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:onClick="goTerms"
        android:text="@string/conditions"
        android:textColor="@color/red"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toEndOf="@+id/cbTerms"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPass"
        app:layout_constraintVertical_bias="0.137" />

    <android.widget.Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:onClick="register"
        android:padding="10dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConditions"
        app:layout_constraintVertical_bias="0.217" />

</androidx.constraintlayout.widget.ConstraintLayout>