<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/black"
        app:title="@string/bar_title_terms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvTerms1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms1"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <TextView
        android:id="@+id/tvTerms2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms2"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTerms1"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/tvTerms3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms3"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTerms2"
        app:layout_constraintVertical_bias="0.037" />

</androidx.constraintlayout.widget.ConstraintLayout>